[metadata]
name = abci
version = attr: abci.__version__
description = Python based ABCI Server for Tendermint
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/davebryson/py-abci
author = Dave Bryson
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers=
    "Development Status :: 3 - Alpha"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: Apache Software License"
    "Programming Language :: Python :: 3.9"
keywords = blockchain, tendermint, abci
project_urls =
    Source = https://github.com/davebryson/py-abci

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9
install_requires =
    protobuf >= 3.6.1
    colorlog >= 3.1.4

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov 
    twine
    black
    build

[tool:pytest]
testpaths = tests

[options.entry_points]
console_scripts =
    counter=example.counter:main